@startuml

title __JDBC's Class Diagram__\n

  namespace JDBC {
    class JDBC.AuthenticationDao {
        {static} - logger : Logger
        + AuthenticationDao()
        + loginAuthenticationEmployee()
        + loginAuthenticationManager()
    }
  }
  

  namespace JDBC {
    class JDBC.ConnectionManager {
        - driver : Driver
        - driverReady : boolean
        {static} - logger : Logger
        - password : String
        - url : String
        - username : String
        + ConnectionManager()
        + getConnection()
        - registerDriver()
    }
  }
  

  namespace JDBC {
    class JDBC.EmployeeDao {
        {static} - logger : Logger
        + EmployeeDao()
        + updateProfileInformation()
        + viewAllEmployees()
        + viewProfileInformation()
        - updateBankAccountDetails()
    }
  }
  

  namespace JDBC {
    class JDBC.ReimbursementDao {
        {static} - logger : Logger
        + ReimbursementDao()
        + ViewPendingRequestAllEmployee()
        + processReimbursementRequest()
        + submitReimbursementRequest()
        + viewPendingReimbursementRequest()
        + viewResolvedReimbursementRequest()
        + viewResolvedReimbursementRequest()
    }
  }
  

  JDBC.AuthenticationDao o-- JDBC.ConnectionManager : cm
  JDBC.EmployeeDao o-- JDBC.ConnectionManager : cm
  JDBC.ReimbursementDao o-- JDBC.ConnectionManager : cm


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
